k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-otus-k8s-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-otus-k8s-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: my-otus-k8s-service
    spec:
      containers:
      - name: my-otus-k8s-service
        image: vspeach/otus-k8s-deploy:latest
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            port: 8000
            path: /health
          failureThreshold: 3
          initialDelaySeconds: 10
          successThreshold: 2
          timeoutSeconds: 1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
