k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-otus-k8s-svc
spec:
  selector:
    app: my-otus-k8s-svc
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
